<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="home_title">Au bord de mer</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="basket_title">Basket</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="address">Addresse</string>
    <string name="mail">Mail</string>
    <string name="password">Mot de passe</string>
    <string name="register">Créer un compte</string>
    <string name="switch_login">Déjà un compte ? Cliquez ici.</string>
    <string name="login">S\'identifier"</string>
    <string name="switch_register">Pas de compte ? Cliquez ici.</string>
    <string name="order_status">En attente d\'une réponse du serveur...</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>