<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seaside_restaurant"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/entrees"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="156dp"
        android:text="@string/entrees"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Entrées" />

    <TextView
        android:id="@+id/plats"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/plats"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrees" />

    <TextView
        android:id="@+id/desserts"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/desserts"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plats" />

    <TextView
        android:id="@+id/title_home"
        android:layout_width="365dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>